<resources>
    <string name="app_name">Keycrux</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Wallet</string>
    <string name="header_wallet">Wallet</string>
    <string name="accountDetail">Detail</string>
    <string name="publicAddress">● Address:</string>
    <string name="curType">● Type:</string>
    <string name="accountName">● Name:</string>
    <string name="add_acc_key">● Key:</string>
    <string name="add_acc_addr">● Address:</string>
    <string name="add_acc_type">● Type:</string>
    <string name="add_acc_name">● Name:</string>
    <string name="wallet_list_title_wallet">Wallet</string>
    <string name="wallet_list_title_mode_online">Online Mode</string>
    <string name="transact_title_transact">Transact</string>
    <string name="find_back_key">Retrieve Private Key</string>
    <string name="transfer">Transfer</string>
    <string name="transfer_address">Transfer address</string>
    <string name="your_private_key">Private Key</string>
    <string name="amount">Amount</string>
    <string name="transfer_address_note">BTC only</string>
    <string name="your_private_key_note">your private key, BTC only</string>
    <string name="amount_note">amount to transfer, BTC as unit</string>
    <string name="wallet_list_title_mode_offline">Offline Mode</string>
    <string name="export_success">The account sequence code has been copied to the clipboard</string>
    <string name="private_key_format_error">Private key format error</string>
    <string name="transfer_suc_msg">%s BTC has been transferred, waiting for network confirmation, txId: %s</string>
    <string name="transfer_suc_title">Transfer Initiated</string>
    <string name="confirm">OK</string>
    <string name="abnormal_transfer">Abnormal transfer</string>
    <string name="collect_title">Retrieve Private Key</string>
    <string name="add_new_tag_title">Add Account</string>
    <string name="import_account">Clipboard\n import</string>
    <string name="add_name_note">Input note information</string>
    <string name="add_pk_note">input private key</string>
    <string name="add_addr_note">input account address</string>
    <string name="add_type_note">input coin type</string>
    <string name="add_choose_audio">choose local audio file:</string>
    <string name="coeN">Share:</string>
    <string name="coeK">Threshold:</string>
    <string name="coeF">Fixed share:</string>
    <string name="coeA">Fixed audio:</string>
    <string name="wallet_coeN">● Share:</string>
    <string name="wallet_coeK">● Threshold:</string>
    <string name="wallet_coeF">● Fixed share:</string>
    <string name="private_key_illegal">Private key format illegal</string>
    <string name="coe_illegal">Parameter invalid</string>
    <string name="fixed_not_supported">Static split storage is not supported in offline mode</string>
    <string name="file_not_found">You set audio share but have not uploaded the file or the file is still uploading</string>
    <string name="generating">Generating. Please do not exit</string>
    <string name="qrcode_gen_fail">Failed to generate QR Code</string>
    <string name="network_err">network abnormal</string>
    <string name="fail_get_share">Failed to get share image</string>
    <string name="fail_get_id">Failed to get ID</string>
    <string name="no_permission_to_save">Images cannot be saved without permission</string>
    <string name="import_suc_msg">Import success, account:</string>
    <string name="import_fail_msg">Import failed because the clipboard data could not be recognized</string>
    <string name="uploading">uploading file ...</string>
    <string name="audio_not_set">Audio file not set yet</string>
    <string name="upload_suc">Audio file upload success</string>
    <string name="download_suc">encoded audio files have been downloaded successfully. The saving location is</string>
    <string name="no_permission_to_scan">Cannot scan without camera permission</string>
    <string name="not_supported_offline">Unavailable in offline mode</string>
    <string name="cheat_detected">Share image has been tampered. Please check the content of the image</string>
    <string name="decode_fail">Share image cannot decode</string>
    <string name="server_err">Server error</string>
    <string name="copy_suc">Copy success</string>
    <string name="retrieve_suc_msg">Private key retrieved: \n%s\n\n Already filed in transfer key</string>
    <string name="dup">share duplicate</string>
    <string name="share_code_err">Abnormal share</string>
    <string name="update_fail">Network error, failed to update share</string>
    <string name="update_suc_msg">Dynamic save image has been refreshed, %d pictures are saved to the local, please pay attention to the update</string>
</resources>