<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/account_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:translationZ="15dp">

        <ImageButton
            android:id="@+id/ret_btn"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ret_btn"
            android:onClick="onReturnClick" />

        <TextView
            android:id="@+id/account_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/ret_btn"
            android:text="@string/accountDetail"
            android:textColor="@color/black80"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/blue_header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/half_ridius_rect_blue"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/blue_header"
        android:background="@drawable/half_ridius_rect_m"
        android:elevation="5dp"
        android:rotationX="180" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topPanel"
        android:background="@drawable/half_ridius_rect"
        android:elevation="5dp"
        android:translationZ="-10dp"/>

    <TextView
        android:id="@+id/account_type2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:layout_below="@id/topPanel"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:translationZ="10dp" />

    <RelativeLayout
        android:id="@+id/account_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topPanel"
        android:stateListAnimator="@null"
        android:layout_marginTop="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:translationZ="10dp">

        <TextView
            android:id="@+id/account_balance01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/accountName"
            android:textColor="@color/black80"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/account_balance02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_toEndOf="@id/account_balance01"
            android:textColor="@color/black80"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_balance"
        android:stateListAnimator="@null"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:translationZ="10dp">

        <TextView
            android:id="@+id/account_address01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/publicAddress"
            android:textColor="@color/black80"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/account_address02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_toEndOf="@id/account_address01"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black80"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_address"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:translationZ="10dp">

        <TextView
            android:id="@+id/account_type01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/curType"
            android:textColor="@color/black80"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:id="@+id/account_type02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_toEndOf="@id/account_type01"
            android:textColor="@color/black80"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_n"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_type"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:translationZ="10dp">

        <TextView
            android:id="@+id/account_n1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/wallet_coeN"
            android:textColor="@color/black80"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:id="@+id/account_n2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:textColor="@color/main_blue"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_k"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_n"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:translationZ="10dp">
        <TextView
            android:id="@+id/account_k1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/wallet_coeK"
            android:textColor="@color/black80"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:id="@+id/account_k2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:textColor="@color/main_blue"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_ff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_k"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:translationZ="10dp">

        <TextView
            android:id="@+id/account_f1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/wallet_coeF"
            android:textColor="@color/black80"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:id="@+id/account_f2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="140dp"
            android:textColor="@color/main_blue"
            android:textSize="18sp" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/get_secret"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/submit"
        android:text="获取私钥"
        android:textSize="16sp" />

</RelativeLayout>
