<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ant_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        android:gravity="left"
        android:text="添加账户"
        android:textColor="@color/black80"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/ant_pk"
        android:layout_below="@id/ant_info"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ant_pk_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_acc_key"
            android:textSize="18sp"
            android:layout_margin="10dp">
        </TextView>

        <EditText
            android:id="@+id/ant_pk_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ant_pk_tag"
            android:layout_toRightOf="@id/ant_pk_tag"
            android:background="@color/on_blue"
            android:hint="在这输入你的私钥"
            android:lines="1"
            android:textSize="18sp"></EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ant_address"
        android:layout_below="@id/ant_pk"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ant_address_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_acc_addr"
            android:textSize="18sp"
            android:layout_margin="10dp">
        </TextView>

        <EditText
            android:id="@+id/ant_address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ant_address_tag"
            android:layout_toRightOf="@id/ant_address_tag"
            android:background="@color/on_blue"
            android:hint="在这输入你的地址"
            android:lines="1"
            android:textSize="18sp"></EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ant_type"
        android:layout_below="@id/ant_address"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ant_type_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_acc_type"
            android:textSize="18sp"
            android:layout_margin="10dp">
        </TextView>

        <EditText
            android:id="@+id/ant_type_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ant_type_tag"
            android:layout_toRightOf="@id/ant_type_tag"
            android:background="@color/on_blue"
            android:hint="在这输入你的币种类型"
            android:lines="1"
            android:textSize="18sp"></EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ant_info"
        android:layout_below="@id/ant_title"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ant_info_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_acc_name"
            android:textSize="18sp"
            android:layout_margin="10dp">
        </TextView>

        <EditText
            android:id="@+id/ant_info_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ant_info_tag"
            android:layout_toRightOf="@id/ant_info_tag"
            android:background="@drawable/add_new_input"
            android:hint="在这输入你的备注信息"
            android:lines="1"
            android:textAlignment="center"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="@color/darkBlue"
            android:textSize="18sp"></EditText>
    </RelativeLayout>

    <TextView
        android:id="@+id/Warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ant_type"
        android:text="注意：门限数应当小于等于分存数"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:textColor="#de1242">

    </TextView>
    <RelativeLayout
        android:id="@+id/ant_kn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Warning"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/ant_k_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="门限数:"
            android:layout_margin="10dp"
            android:textSize="18sp">
        </TextView>

        <Spinner
            android:id="@+id/ant_k_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/ant_k_tag"
            android:layout_toRightOf="@id/ant_k_tag"
            android:entries="@array/valueK"
            android:spinnerMode="dialog"
            android:textSize="16sp"
            android:theme="@style/Spinner"></Spinner>
        <TextView
            android:id="@+id/ant_n_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="分存数:"
            android:layout_toRightOf="@id/ant_k_spinner"
            android:layout_margin="10dp"
            android:textSize="18sp">
        </TextView>
        <Spinner
            android:id="@+id/ant_n_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:theme="@style/Spinner"
            android:entries="@array/valueN"
            android:textSize="16sp"
            android:layout_alignBottom="@id/ant_n_tag"
            android:layout_toRightOf="@id/ant_n_tag">
        </Spinner>
    </RelativeLayout>


    <Button
        android:id="@+id/ant_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:textSize="25dp"
        android:text="提交"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/buttom_press">

    </Button>




</RelativeLayout>